--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/*/node_modules
-/*/.pnp
-/*/.pnp.js
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -11,17 +11,15 @@
 # production
 /build
 
-/front-end/package-lock.json
+package-lock.json
 
 # misc
-.idea
-/*/.idea
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-/front-end/npm-debug.log*
-/front-end/yarn-debug.log*
-/front-end/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
