db schema with mappings and generation

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <lombok.version>1.18.30</lombok.version>
+        <mysql.version>8.0.33</mysql.version>
     </properties>
 
     <dependencies>
@@ -31,6 +32,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
         </dependency>
     </dependencies>
 
