--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.15.2",
-    "@mui/material": "5.15.2",
-    "@mui/x-data-grid": "6.18.6",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.0.0",
+    "@mui/x-date-pickers": "^7.0.0",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "axios": "1.6.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router": "6.21.1",
-    "react-router-dom": "6.21.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "2.1.4"
+    "dayjs": "^1.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start:local": "env-cmd -f .env.local react-scripts start",
